edited contact formular and added minlength for messages

--- a/src/app/main-content/contact/contact.component.html
+++ b/src/app/main-content/contact/contact.component.html
@@ -24,7 +24,7 @@
                  @if(!email.valid && email.touched){<span>{{ 'CONTACT.EMAIL_REQUIRED' | translate }}</span>}
 
                 <textarea #message="ngModel" [(ngModel)]="contactData.message" name="message" id="message"
-                    placeholder="{{ 'CONTACT.MESSAGE_PLACEHOLDER' | translate }}" required
+                    placeholder="{{ 'CONTACT.MESSAGE_PLACEHOLDER' | translate }}" required minlength="5"
                     [ngClass]="{'invalid': !message.valid && message.touched}"></textarea>
                  @if(!message.valid && message.touched){<span>{{ 'CONTACT.MESSAGE_EMPTY' | translate }}</span>}
 
@@ -40,10 +40,9 @@
                @if(contactForm.submitted && !contactData.acceptPolicy){<span >{{ 'CONTACT.ACCEPT_PRIVACY' | translate
                     }}</span>}
 
-                <button class="send-button" type="submit" [ngClass]="{'active': !message.valid && message.touched}">
+                <button class="send-button" type="submit" [disabled]="!contactForm.valid">
                     {{ buttonText }}
                 </button>
-
                       <a href="#header"> <img src="./../../../assets/img/arrow-top-icon.png" alt="Arrow top">
                 </a>
             </form>
