--- a/src/app/main-content/landing-page/landing-page.component.html
+++ b/src/app/main-content/landing-page/landing-page.component.html
@@ -6,7 +6,7 @@
         <div class="right-content">
             <span>{{ 'LANDING_PAGE.HELLO' | translate }}</span>
             <div class="frontend-wrapper">
-                <h1 class="first">{{ 'LANDING_PAGE.FRONTEND' | translate }}</h1>
+                <h1 class="headline-top">{{ 'LANDING_PAGE.FRONTEND' | translate }}</h1>
                 <h1>{{ 'LANDING_PAGE.DEVELOPER' | translate }}</h1>
             </div>
             <span class="scroll-span">{{ 'LANDING_PAGE.SCROLL' | translate }}</span>
