--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div id="app"><app-header (toggleMenu)="toggleMenu()"></app-header>
-    <div><router-outlet></router-outlet></div>
+    <router-outlet></router-outlet>
     @if (isOpen) {
-        <app-responsive-menu></app-responsive-menu>
+    <app-responsive-menu></app-responsive-menu>
     }
     <app-footer></app-footer>
 </div>
