edited responsive design on imprint component

--- a/src/app/imprint/imprint.component.html
+++ b/src/app/imprint/imprint.component.html
@@ -5,11 +5,11 @@
         <span>Galina Antipin</span>
         <span>Schachtstraße 20</span>
         <span>06577 Oberheldrungen</span>
-        <br> <span> Kontakt:</span>
+        <br> 
         <span> galina.antipin&#64;gmail.com</span>
         <span> 0172 2594032</span>
         <br>
-        <span>Erstellt von impressum-generator.info </span>
+        <span>impressum-generator.info </span>
         <span>powered by abfindungshero.de</span>
         <br>
         <span>Angaben gemäß Par. 5 DDG</span>
