linked header in responsive menu

--- a/src/app/shared/components/responsive-menu/responsive-menu.component.html
+++ b/src/app/shared/components/responsive-menu/responsive-menu.component.html
@@ -1,6 +1,6 @@
 @if (isOpen){<section id="responsive-menu" [ngClass]="{'open': isOpen}">
     <div class="menu-wrapper">
-        <header> <img class="logo" src="./../../../../assets/img/logo.png" alt="Logo">
+        <header> <a href="./"> <img class="logo" src="./../../../../assets/img/logo.png" alt="Logo"></a>
             <img class="close-btn" src="./../../../../assets/img/close-icon.png" alt="Close Icon" (click)="closeMenu()">
         </header>
         <div class="hamburger-menu">
