--- a/src/app/main-content/contact/contact.component.html
+++ b/src/app/main-content/contact/contact.component.html
@@ -43,7 +43,7 @@
                  <button class="send-button" type="submit" [ngClass]="{'active': !message.valid && message.touched}">
                     {{ buttonText }}
                 </button>
-                      <a href="#header"> <img src="./../../../assets/img/arrow-top-icon.png" alt="Arrow top">
+                      <a href="#header"> <img class="arrow-top-icon" src="./../../../assets/img/arrow-top-icon.png" alt="Arrow top">
                 </a>
             </form>
         </div>
