--- a/src/styles.scss
+++ b/src/styles.scss
@@ -19,9 +19,10 @@
     background-color: white;
     cursor: pointer;
     font-size: 23px;
+    transition: background-image 0.4s ease, color 0.4s ease;
   
     &:hover {
-      background-color: #5988FF;
+      background-image: linear-gradient(to right, #5988FF, #0043F0);
       color: white;
       transform: scale(1.05);
     }
