--- a/src/app/main-content/my-work/my-work.component.scss
+++ b/src/app/main-content/my-work/my-work.component.scss
@@ -132,12 +132,12 @@ img {
     }
 }
 
-@media(max-width:1669px){
+@media(max-width:1669px) {
     section {
         background-image: url('./../../../assets/img/circle.png'), url('./../../../assets/img/circle.png'), url('./../../../assets/img/circle.png'), url('./../../../assets/img/circle.png'), url('./../../../assets/img/circle.png');
-        background-size: 2%, 25%, 20%, 10%, 6%;
+        background-size: 6%, 25%, 20%, 10%, 6%;
         background-position:
-            30% 1.5%,
+            50% 1.5%,
             120% 50%,
             -10% 40%,
             90% 15%,
@@ -170,9 +170,10 @@ img {
     }
 }
 
-@media(max-width:900px){
+@media(max-width:900px) {
 
-    .portfolio-wrapper.reverse, .middle-container{
+    .portfolio-wrapper.reverse,
+    .middle-container {
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -190,17 +191,17 @@ img {
         padding-top: 6%;
         position: relative;
         background-image: url('./../../../assets/img/circle.png'), url('./../../../assets/img/circle.png'), url('./../../../assets/img/circle.png'), url('./../../../assets/img/circle.png'), url('./../../../assets/img/circle.png');
-        background-size: 8%, 25%, 20%, 10%, 6%;
+        background-size: 8%, 25%, 20%, 20%, 6%;
         background-position:
-            90% 5%,
+            60% 1%,
             120% 50%,
             -10% 40%,
-            90% 15%,
+            100% 2%,
             90% 99%;
         background-repeat: no-repeat;
     }
 
-    .description-content{
+    .description-content {
         width: 100%;
         padding-left: 0;
         display: flex;
@@ -210,7 +211,7 @@ img {
         text-align: center !important;
         margin-bottom: 12%;
 
-        span{
+        span {
             width: 100%;
         }
     }
@@ -242,9 +243,15 @@ img {
     button {
         font-size: 1.5rem;
     }
+
+    .portfolio-headline {
+        margin-top: 15%;
+        width: 100%;
+    }
+
 }
 
-@media(max-width:600px){
+@media(max-width:600px) {
 
     h1 {
         font-size: 4rem;
@@ -257,31 +264,11 @@ img {
     p {
         font-size: 2.5rem;
     }
-
-    .portfolio-headline {
-        width: 100%;
-    }
-
-    section {
-        width: 100%;
-        display: flex;
-        justify-content: center;
-        padding-top: 6%;
-        position: relative;
-        background-image: url('./../../../assets/img/circle.png'), url('./../../../assets/img/circle.png'), url('./../../../assets/img/circle.png'), url('./../../../assets/img/circle.png');
-        background-size: 25%, 20%, 10%, 6%;
-        background-position:
-            120% 50%,
-            -10% 40%,
-            90% 15%,
-            90% 99%;
-        background-repeat: no-repeat;
-    }
 }
 
 @media (max-width:400px) {
     h3 {
-        font-size: 1.2rem 
+        font-size: 1.2rem
     }
 
     span {
@@ -294,5 +281,24 @@ img {
 
     h2 {
         font-size: 1rem;
+    }
+}
+
+@media(max-width:371px) {
+    section {
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        padding-top: 6%;
+        position: relative;
+        background-image: url('./../../../assets/img/circle.png'), url('./../../../assets/img/circle.png'), url('./../../../assets/img/circle.png'), url('./../../../assets/img/circle.png'), url('./../../../assets/img/circle.png');
+        background-size: 8%, 25%, 20%, 15%, 6%;
+        background-position:
+            60% 1%,
+            120% 50%,
+            -10% 40%,
+            100% 1%,
+            90% 99%;
+        background-repeat: no-repeat;
     }
 }
