--- a/src/app/main-content/references/references.component.scss
+++ b/src/app/main-content/references/references.component.scss
@@ -112,5 +112,12 @@ section {
         margin-left: 8%;
         margin-right: 8%;
     }
+
+    .headline {
+        text-align: center;
+        margin-bottom: 5%;
+        margin-left: 3%;
+        margin-right: 3%;
+    }
   }
 
