--- a/src/app/imprint/imprint.component.scss
+++ b/src/app/imprint/imprint.component.scss
@@ -10,6 +10,7 @@ section {
 
 .wrapper {
     max-width: 1920px;
+    max-height: 1440px;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
