--- a/src/app/main-content/about-me/about-me.component.scss
+++ b/src/app/main-content/about-me/about-me.component.scss
@@ -29,6 +29,7 @@ h2 {
 
 .content-wrapper {
     max-width: 1920px;
+    max-height: 1440px;
     margin-left: 8%;
     margin-right: 8%;
     display: flex;
