--- a/src/app/main-content/contact/contact.component.scss
+++ b/src/app/main-content/contact/contact.component.scss
@@ -47,6 +47,7 @@ section {
 
 .contact-wrapper {
     max-width: 1920px;
+    max-height: 1440px;
     width: 100%;
     margin: 5% 8%;
     display: flex;
