--- a/src/app/main-content/landing-page/landing-page.component.scss
+++ b/src/app/main-content/landing-page/landing-page.component.scss
@@ -31,6 +31,7 @@ span {
     margin-right: 8%;
     margin-top: 3%;
     max-width: 1920px;
+    max-height: 1440px;
     display: flex;
     justify-content: space-between;
     width: 100%;
