edited text section

--- a/src/app/imprint/imprint.component.scss
+++ b/src/app/imprint/imprint.component.scss
@@ -6,6 +6,8 @@ section {
     background-size: 12%, 15%;
     background-repeat: no-repeat;
     background-position: center -18%, bottom 15% right 3%, 20% 90%;
+    display: flex;
+    justify-content: center;
 }
 
 .wrapper {
