--- a/src/app/main-content/about-me/about-me.component.scss
+++ b/src/app/main-content/about-me/about-me.component.scss
@@ -20,6 +20,10 @@ h2 {
     margin-bottom: 2%;
 }
 
+button {
+    margin-top: 10%;
+}
+
 .headline {
     display: flex;
     flex-direction: column;
