--- a/src/app/main-content/landing-page/landing-page.component.scss
+++ b/src/app/main-content/landing-page/landing-page.component.scss
@@ -9,6 +9,7 @@ section {
     background-size: 1100px;
     background-position: -40% 80%;
     background-repeat: no-repeat;
+    max-height: 1440px;
 }
 
 h1 {
@@ -33,7 +34,7 @@ span {
     max-width: 1920px;
     max-height: 1440px;
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     width: 100%;
 }
 
@@ -43,9 +44,12 @@ span {
     display: flex;
     align-items: flex-end;
     justify-content: flex-start;
+    max-height: 1440px;
+    
 
     img {
         height: 90vh;
+        max-height: 1440px;
     }
 }
 
@@ -108,6 +112,10 @@ span {
     }
 }
 
+@media(min-width:2000px){
+    section {
+        background-size: 60%;}
+}
 
 @media(max-width:1700px) {
     h1 {
@@ -124,7 +132,6 @@ span {
 }
 
 @media(max-width:1617px) {
-
     section {
         background-image: url('./../../../assets/img/circle.png');
         background-size: 1000px;
@@ -133,7 +140,6 @@ span {
 }
 
 @media(max-width:1507px) {
-
     section {
         background-image: url('./../../../assets/img/circle.png');
         background-size: 900px;
@@ -142,7 +148,6 @@ span {
 }
 
 @media(max-width:1394px) {
-
     section {
         background-image: url('./../../../assets/img/circle.png');
         background-size: 850px;
@@ -165,7 +170,6 @@ span {
 }
 
 @media(max-width:1263px) {
-
     section {
         background-image: url('./../../../assets/img/circle.png');
         background-size: 800px;
@@ -181,7 +185,6 @@ span {
 }
 
 @media(max-width:1203px) {
-
     section {
         background-image: url('./../../../assets/img/circle.png');
         background-size: 750px;
@@ -202,7 +205,6 @@ span {
 }
 
 @media(max-width:1112px) {
-
     section {
         background-image: url('./../../../assets/img/circle.png');
         background-size: 700px;
@@ -223,7 +225,6 @@ span {
 }
 
 @media(max-width:1000px) {
-
     section {
         background-image: url('./../../../assets/img/circle.png');
         background-size: 650px;
@@ -248,7 +249,6 @@ span {
 }
 
 @media(max-width:950px) {
-
     section {
         background-image: url('./../../../assets/img/circle.png');
         background-size: 900px;
@@ -293,7 +293,6 @@ span {
 }
 
 @media(max-width:700px) {
-
     h1 {
         font-size: 6.5rem;
     }
@@ -312,7 +311,6 @@ span {
 }
 
 @media(max-width:618px) {
-
     h1 {
         font-size: 5rem;
     }
@@ -348,7 +346,6 @@ span {
 }
 
 @media(max-width:480px) {
-
     h1 {
         font-size: 4rem;
     }
@@ -363,7 +360,6 @@ span {
 }
 
 @media(max-width:410px) {
-
     .left-content {
 
         img {
@@ -393,7 +389,6 @@ span {
 }
 
 @media(max-width:365px) {
-
     .left-content {
 
         img {
@@ -419,7 +414,6 @@ span {
 }
 
 @media(max-width:340px) {
-
     .left-content {
         width: 95%;
 
