edited landing page responsive design

--- a/src/app/main-content/landing-page/landing-page.component.scss
+++ b/src/app/main-content/landing-page/landing-page.component.scss
@@ -259,6 +259,7 @@ span {
     .content-wrapper {
         display: flex;
         flex-direction: column-reverse;
+        justify-content: flex-start;
     }
 
     .scroll-down-line,
