--- a/src/app/main-content/landing-page/landing-page.component.scss
+++ b/src/app/main-content/landing-page/landing-page.component.scss
@@ -46,6 +46,7 @@ span {
     align-items: flex-end;
     justify-content: flex-start;
     max-height: 1440px;
+    overflow: hidden;
     
 
     img {
