fixed slide in and slide out function in responsive menu component

--- a/src/app/shared/components/responsive-menu/responsive-menu.component.html
+++ b/src/app/shared/components/responsive-menu/responsive-menu.component.html
@@ -1,4 +1,4 @@
-@if (isOpen){<section id="responsive-menu" [ngClass]="{'open': isOpen}">
+@if (isOpen){<section id="responsive-menu" [ngClass]="{'open': menuIsOpen, 'closed': !menuIsOpen}">
     <div class="menu-wrapper">
         <header> <a href="./"> <img class="logo" src="./../../../../assets/img/logo.png" alt="Logo"></a>
             <img class="close-btn" src="./../../../../assets/img/close-icon.png" alt="Close Icon" (click)="closeMenu()">
