--- a/src/app/shared/components/responsive-menu/responsive-menu.component.scss
+++ b/src/app/shared/components/responsive-menu/responsive-menu.component.scss
@@ -1,6 +1,7 @@
 section {
     position: absolute;
     top: 0;
+    right: 0;
     width: 100%;
     height: 100vh;
     background: linear-gradient(to bottom, #FFFFFF, #EAF0FF);
@@ -8,6 +9,38 @@ section {
     flex-direction: column;
     align-items: center;
     z-index: 1000;
+    transform: translateX(100%);
+    transition: transform 0.4s ease;
+
+    &.open {
+        animation: slide-in 0.4s forwards;
+    }
+
+    &.closed {
+        animation: slide-out 0.4s forwards; 
+    }
+}
+
+@keyframes slide-in {
+    0% {
+        transform: translateX(100%);
+        opacity: 0;
+    }
+    100% {
+        transform: translateX(0);
+        opacity: 1; 
+    }
+}
+
+@keyframes slide-out {
+    0% {
+        transform: translateX(0);
+        opacity: 1;
+    }
+    100% {
+        transform: translateX(100%);
+        opacity: 0; 
+    }
 }
 
 header {
@@ -15,7 +48,7 @@ header {
     justify-content: space-between;
     align-items: center;
     width: 100%;
-    margin-left: 8%;
+    padding-left: 8&;
 }
 
 .menu-wrapper {
@@ -64,17 +97,5 @@ span {
     align-items: center;
 }
 
-@keyframes slide-in {
-    0% {
-        transform: translateX(100%);
-        opacity: 0;
-    }
-    100% {
-        transform: translateX(0);
-        opacity: 1; 
-    }
-}
 
-#responsive-menu {
-    animation: slide-in 0.4s ease forwards; 
-}
+
