--- a/src/app/main-content/skills/skills.component.html
+++ b/src/app/main-content/skills/skills.component.html
@@ -1,4 +1,4 @@
-<section>
+<section data-aos="fade-up">
     <div class="content-wrapper">
         <h1>{{ 'SKILLS.TITLE' | translate }}</h1>
         <div class="icons-wrapper"> 
