--- a/src/app/main-content/main-content.component.html
+++ b/src/app/main-content/main-content.component.html
@@ -1,6 +1,6 @@
 <app-landing-page></app-landing-page>
-<app-about-me id="about-me"></app-about-me>
+<app-about-me id="about-me" data-aos="fade-up"></app-about-me>
 <app-skills id="skills"></app-skills>
 <app-my-work id="portfolio"></app-my-work>
-<app-references></app-references>
-<app-contact id="contact"></app-contact>
+<app-references data-aos="fade-up"></app-references>
+<app-contact id="contact" data-aos="fade-up"></app-contact>
