--- a/src/app/imprint/imprint.component.scss
+++ b/src/app/imprint/imprint.component.scss
@@ -2,10 +2,10 @@ section {
     height: calc(100vh - 300px);
     width: 100%;
     font-family: 'Montserrat';
-    background-image: url('./../../assets/img/circle.png'), url('/../../assets/img/circle.png'), url('/../../assets/img/circle.png');
-    background-size: 12%, 15%;
+    background-image: url('/../../assets/img/circle.png'), url('/../../assets/img/circle.png');
+    background-size:  15%, 5%;
     background-repeat: no-repeat;
-    background-position: center -18%, bottom 15% right 3%, 20% 90%;
+    background-position:  bottom 15% right 3%, 20% 90%;
     display: flex;
     justify-content: center;
 }
@@ -44,5 +44,4 @@ span {
     section {
         height:100vh;
     }
-
 }
