edited primary button in about me and my work component

--- a/src/app/main-content/about-me/about-me.component.html
+++ b/src/app/main-content/about-me/about-me.component.html
@@ -21,7 +21,7 @@
             <div class="text-content">
                 <span>{{ 'WORK_TOGETHER.INTRO' | translate }}</span><br>
                 <span>{{ 'WORK_TOGETHER.CONTACT_MESSAGE' | translate }}</span>
-                <a href="#contact"><button>{{ 'WORK_TOGETHER.SEND_MESSAGE' | translate }}</button></a>
+                <a href="#contact"><button class="primary-button">{{ 'WORK_TOGETHER.SEND_MESSAGE' | translate }}</button></a>
             </div>
         </div>
     </div>
