--- a/src/app/main-content/my-work/my-work.component.html
+++ b/src/app/main-content/my-work/my-work.component.html
@@ -12,11 +12,11 @@
                 <span>{{ 'WORK.PROJECT.DESCRIPTION.' + project.id | translate }}</span>
                 <div class="button-section">
                     <a [href]="project.liveLink" target="_blank" class="test-button">
-                        <button>{{ 'WORK.PROJECT.LIVE_TEST' | translate }}</button>
+                        <button class="primary-button">{{ 'WORK.PROJECT.LIVE_TEST' | translate }}</button>
                     </a>
                     <div class="space-between"></div>
                     <a [href]="project.githubLink" target="_blank" class="github-button">
-                        <button>{{ 'WORK.PROJECT.GITHUB' | translate }}</button>
+                        <button class="primary-button">{{ 'WORK.PROJECT.GITHUB' | translate }}</button>
                     </a>
                 </div>
             </div>
