fixed hover effect on inputfields

--- a/src/app/main-content/contact/contact.component.scss
+++ b/src/app/main-content/contact/contact.component.scss
@@ -99,7 +99,7 @@ textarea {
     outline: none;
 
     &:hover {
-        border: 2px solid #5988FF;
+        outline: 1px solid #5988FF;
     }
 
     &:focus {
