fixed background color gradient

--- a/src/app/main-content/contact/contact.component.scss
+++ b/src/app/main-content/contact/contact.component.scss
@@ -2,13 +2,14 @@ section {
     display: flex;
     justify-content: center;
     width: 100%;
-    background-image: url('./../../../assets/img/circle.png'), url('./../../../assets/img/circle.png'), url('./../../../assets/img/circle.png');
-    background-size: 8%, 3%, 6%;
+    background: url('./../../../assets/img/circle.png'), url('./../../../assets/img/circle.png'), url('./../../../assets/img/circle.png'), linear-gradient(to bottom, #FFFFFF, #EAF0FF) ;
+    background-size: 8%, 3%, 6%, 100%;
     background-position:
         70% 5%,
         85% 95%,
         20% 80%;
     background-repeat: no-repeat;
+    position: relative;
 
     h1 {
         font-family: 'Baloo 2';
@@ -44,6 +45,7 @@ section {
     }
 }
 
+
 .contact-wrapper {
     max-width: 1920px;
     width: 100%;
@@ -62,7 +64,7 @@ span {
     font-family: 'Montserrat';
     color: red;
     font-size: 1rem;
-    min-height: 20px; 
+    min-height: 20px;
     margin-top: -20px;
 }
 
@@ -97,6 +99,7 @@ textarea {
     margin-bottom: 30px;
     color: black;
     outline: none;
+    background-color: #f2f5fd;
 
     &:hover {
         outline: 1px solid #5988FF;
