--- a/src/app/privacy-policy/privacy-policy.component.scss
+++ b/src/app/privacy-policy/privacy-policy.component.scss
@@ -5,6 +5,7 @@ section {
     font-family: 'Montserrat';
     color: black;
     font-size: 1rem;
+    background: linear-gradient(to bottom, #FFFFFF, #EAF0FF);
 
     h2 {
         font-family: 'Baloo 2';
