--- a/src/app/main-content/references/references.component.scss
+++ b/src/app/main-content/references/references.component.scss
@@ -63,61 +63,70 @@ section {
 .reference-card {
     display: flex;
     flex-direction: column;
-    max-width: 30%;
-}
-
-.references {
-    display: flex;
-    overflow-x: auto;
-    padding: 10px;
-
-@media (max-width: 1000px) {
-        flex-wrap: nowrap;
-    }
-}
-
-.reference-card {
-    flex: 0 0 70%;
     align-items: center;
+    max-width: 30%;
     margin-right: 20px;
-    min-width: 300px;
+    max-height: 800px;
     text-align: center;
-    padding: 20px;
+    padding: 30px;
+    border-radius: 8px;
+    background-color: rgba(255, 255, 255, 0.08);
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+    transition: transform 0.3s ease;
+
+    &:hover {
+        transform: scale(1.02);
+    }
 }
 
-.references {
-    overflow-x: scroll; 
-    scrollbar-width: none; 
-    -ms-overflow-style: none;
-  }
-  
-  .references::-webkit-scrollbar {
-      display: none; 
-  }
-
-  @media (max-width:730px) {
-    h1 {
-        font-size: 2rem;
+@media(max-width:1287px) {
+    .references {
+        display: flex;
+        flex-direction: column;
+        width: 100%;
     }
 
-    span {
-        font-size: 1.8rem !important;
+    .reference-card {
+        max-width: 100%;
+        margin-bottom: 40px;
+        margin-right: 0px;
+    }
+}
+
+@media(max-width:790px) {
+
+    .content-wrapper {
+        margin-left: 3%;
+        margin-right: 3%;
+    }
+}
+
+@media(max-width:450px) {
+    section {
+        h1 {
+            font-size: 2.5rem;
+        }
+
+        span {
+            font-size: 1.3rem !important;
+        }
     }
 
     h3 {
         font-size: 1.3rem !important;
     }
 
-    .content-wrapper {
-        margin-left: 8%;
-        margin-right: 8%;
+    span {
+        font-size: 1rem !important;
     }
 
-    .headline {
-        text-align: center;
-        margin-bottom: 5%;
-        margin-left: 3%;
-        margin-right: 3%;
+    p {
+        font-size: 0.8rem;
     }
-  }
 
+    .reference-card {
+        max-width: 100%;
+        margin-bottom: 40px;
+        padding: 10px
+    }
+}
